--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -8,7 +8,7 @@
   transform: translate(-50%, -50%);
   width: 400px;
   height: 92%;
-  background: white;
+  background: #fafafa;
   border-radius: 6px;
   padding: 24px;
   box-sizing: border-box;
